2012-07-25  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-kill-sticky-article-buffers): Reintroduce.

2012-07-24  Julien Danjou  <julien@danjou.info>

	* mail-source.el (mail-source-movemail-and-remove): Remove, unused.

	* nntp.el (nntp-send-nosy-authinfo, nntp-send-authinfo-from-file)
	(nntp-async-timer-handler): Remove, unused.

	* nnimap.el (nnimap-get-responses): Remove, unused.

	* nnheader.el (mail-header-set-extra): Remove, unused.

	* netrc.el (netrc-find-service-number, netrc-store-data): Remove,
	unused.

	* mm-view.el (mm-view-sound-file): Remove, unused.

	* mm-url.el (mm-url-fetch-simple, mm-url-fetch-form)
	(mm-url-encode-multipart-form-data): Remove, unused.

	* message.el (message-remove-signature, message-make-host-name)
	(message-fill-address): Remove, unused.

	* gnus.el (gnus-writable-groups, gnus-group-guess-prefixed-name)
	(gnus-group-guess-full-name, gnus-group-guess-prefixed-name): Remove,
	unused.

	* gnus-xmas.el (gnus-xmas-highlight-selected-summary)
	(gnus-xmas-call-region): Remove, unused.

	* gnus-uu.el (gnus-uu-find-name-in-shar): Remove, unused.

	* gnus-util.el (gnus-extract-address-component-name)
	(gnus-extract-address-component-email, gnus-sortable-date)
	(gnus-alist-to-hashtable, gnus-hashtable-to-alist)
	(gnus-process-live-p): Remove, unused.

	* gnus-topic.el (gnus-group-parent-topic): Remove, unused.

	* gnus-sum.el (gnus-score-set-default, gnus-article-parent-p)
	(gnus-article-read-p, gnus-uncompress-marks): Remove, unused.
	(gnus-summary-set-current-mark): Remove obsolete, empty and unused
	function.

	* gnus-start.el (gnus-kill-newsgroup): Remove unused obsolete function.

	* gnus-score.el (gnus-summary-score-crossposting)
	(gnus-score-regexp-bad-p): Remove, unused.

	* gnus-salt.el (gnus-tree-goto-article): Remove, unused.

	* gnus-range.el (gnus-sublist-p): Remove, unused.

	* gnus-msg.el (gnus-mail-parse-comma-list, gnus-put-message): Remove,
	unused.
